samples/_failures_safe/1761485058_e79819_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2187a906.c: In function ‘main’:
./samples/SAFE/__tmp_2187a906.c:165:5: error: expected declaration or statement at end of input
  165 |     add_transition(sm, 3, 4, 'b');
      |     ^~~~~~~~~~~~~~
